Fix timeline annotation nowrap, fixes #68

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -107,6 +107,7 @@ body {
                 font-size: 0.8em;
                 margin-left: -50%;
                 background-color: #2dc6e0;
+                white-space: nowrap;
             }
             &.inactive {
                 display: none;
